Logger service created using node js and express js. Some minor modification in spring boot side.

--- a/eventlogic-api-gateway/src/main/resources/application.yml
+++ b/eventlogic-api-gateway/src/main/resources/application.yml
@@ -18,6 +18,12 @@ spring:
           uri: lb://PARTICIPANT-SERVICE
           predicates:
             - Path=/api/v1/participants/**
+
+        # logger service node and express js app
+        - id: LOGGER-SERVICE
+          uri: lb://LOGGER-SERVICE
+          predicates:
+            - Path=/api/v1/logger/**
 eureka:
   instance:
     hostname: localhost
