--- a/event-service/src/main/resources/application.yml
+++ b/event-service/src/main/resources/application.yml
@@ -9,3 +9,8 @@ spring:
 eureka:
   instance:
     hostname: localhost
+  client:
+    fetch-registry: true
+    register-with-eureka: true #default is also true
+    service-url:
+      defaultZone: http://localhost:8761/eureka
