node.js and express js app also registered with eureka server and requested from another microservice successfully

--- a/event-service/src/main/resources/application.yml
+++ b/event-service/src/main/resources/application.yml
@@ -15,7 +15,7 @@ eureka:
     hostname: localhost
   client:
     fetch-registry: true
-    register-with-eureka: true #default is also true
+    register-with-eureka: true #default is also true # client discovery
     service-url:
       defaultZone: http://localhost:8761/eureka
 
