--- a/logger-service/package.json
+++ b/logger-service/package.json
@@ -9,6 +9,7 @@
   "author": "Badri Paudel",
   "license": "ISC",
   "dependencies": {
+    "eureka-js-client": "^4.5.0",
     "express": "^4.18.2"
   }
 }
